--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@craco/craco": "^6.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -13,18 +14,23 @@
     "@types/react-dom": "^17.0.0",
     "antd": "^4.16.9",
     "craco-antd": "^1.19.0",
-    "craco-less": "^1.18.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "gh-pages": "^3.2.3",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-is": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+    "start": "cross-env NODE_PATH=src craco start",
+    "build": "cross-env NODE_PATH=src craco build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,7 +51,11 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.8",
+    "@types/styled-components": "^5.1.11",
+    "cross-env": "^7.0.3",
     "less": "^4.1.1",
     "less-loader": "^10.0.1"
-  }
+  },
+  "homepage": "https://janghw811.github.io/dhl/"
 }
