--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "antd": "^4.16.9",
-    "craco-antd": "^1.19.0",
     "gh-pages": "^3.2.3",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-is": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recoil": "^0.4.0",
     "styled-components": "^5.3.0",
+    "swr": "^0.5.6",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -30,7 +31,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "clean": "rm -rf node_modules && npm cache clean -f"
   },
   "eslintConfig": {
     "extends": [
@@ -53,6 +55,8 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.11",
+    "craco-alias": "^3.0.1",
+    "craco-antd": "^1.19.0",
     "cross-env": "^7.0.3",
     "less": "^4.1.1",
     "less-loader": "^10.0.1"
