--- a/package.json
+++ b/package.json
@@ -61,5 +61,5 @@
     "less": "^4.1.1",
     "less-loader": "^10.0.1"
   },
-  "homepage": "https://janghw811.github.io/dhl/"
+  "homepage": "https://janghw811.github.io/"
 }
