--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -10,7 +10,8 @@
       "@types/*": ["src/types/*"],
       "@utils/*": ["src/utils/*"],
       "@assets/*": ["src/assets/*"],
-      "@constants/*": ["src/constants/*"]
+      "@constants/*": ["src/constants/*"],
+      "@pages/*": ["src/pages/*"]
     }
   }
 }
