--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^4.16.9",
     "gh-pages": "^3.2.3",
     "react": "^16.14.0",
+    "react-barcodes": "^1.1.0",
     "react-dom": "^16.14.0",
     "react-is": "^16.13.1",
     "react-router-dom": "^5.2.0",
