프론트 1차완료

--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "less": "^4.1.1",
     "less-loader": "7.3.0"
   },
-  "homepage": "https://janghw811.github.io/",
+  "homepage": "http://mykulwstc000149.kul-dc.dhl.com:7270/kcmf",
   "jest": {
     "roots": [
       "<rootDir>/src"
